<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasksFragment">

    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.example.android.architecture.blueprints.todoapp.taskdetail.TaskDetailFragment"
        android:label="Task Details">
        <action
            android:id="@+id/action_taskDetailFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
        <argument
            android:name="taskId"
            app:argType="string" />
        <action
            android:id="@+id/action_taskDetailFragment_to_tasksFragment"
            app:destination="@id/tasksFragment" />
    </fragment>
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.android.architecture.blueprints.todoapp.statistics.StatisticsFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_statisticsFragment_to_tasksFragment"
            app:destination="@id/tasksFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.example.android.architecture.blueprints.todoapp.tasks.TasksFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_tasksFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
        <argument
            android:name="userMessage"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.example.android.architecture.blueprints.todoapp.addedittask.AddEditTaskFragment"
        android:label="{title}">
        <argument
            android:name="taskId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="false" />
        <action
            android:id="@+id/action_addEditTaskFragment_to_tasksFragment"
            app:destination="@id/tasksFragment"
            />
    </fragment>
    <argument
        android:name="userMessage"
        android:defaultValue="0" />
    <fragment
        android:id="@+id/savedDataFragment"
        android:name="com.example.android.architecture.blueprints.todoapp.savedataexample.SavedDataFragment"
        android:label="SavedDataFragment" />
</navigation>
